Prevent wrapping of 'Wi-Fi' button text in header

--- a/files/www/css/style.css
+++ b/files/www/css/style.css
@@ -264,6 +264,7 @@ header form button {
 	font-size: 14px;
 	font-weight: normal;
 	color: #111;
+	white-space: nowrap;
 }
 
 header form button:hover {
